<resources>
    <string name="app_name">Arcab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="mobile_number_explanation">Your mobile number is only used for authentication and will not be shared with anyone.</string>
    <string name="mobile_number_hint">Phone number</string>
    <string name="get_started">Get Started</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="title_activity_maps">Map</string>
    <string name="link_your_id">Link Your Id</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_continue">Continue</string>

    <string name="sign_in">Sign In</string>

    <string name="initial_setup_places_fragment_header_pick">Pick</string>
    <string name="initial_setup_places_fragment_header_nearby">Nearby</string>
    <string name="initial_setup_places_fragment_header_search_result">Search Results</string>
    <string name="initial_setup_places_fragment_pick_current_location">Current Location</string>
    <string name="initial_setup_places_fragment_pick_location_on_map">Location on Map</string>

    <string name="initial_setup_pickup_title">Pickup/ Dropoff</string>
    <string name="initial_setup_pickup_point_description">We picked the following points for you. Walk and save a bit or let us come and pick you up.</string>
    <string name="initial_setup_pickup_timing_description">Select when you\’d like to be picked up to and from your organization. You may edit these at anytime.</string>
    <string name="initial_setup_pickup_your_point">Your Point</string>
    <string name="initial_setup_pickup_common_point">Common Point</string>
    <string name="initial_setup_pickup_point_available">%1$d Points Available</string>
    <string name="initial_setup_pickup_timing_available">%1$d Timings Available</string>
    <string name="initial_setup_pickup_timing_arrives">Arrives at %s</string>
    <string name="initial_setup_pickup_timing_leaves">Leaves at %s</string>
    <string name="initial_setup_pickup_from">From Burjuman Metro Station Bus Stop C</string>
    <string name="initial_setup_pickup_address">9th Street, Bank Road, Bur Dub…</string>
    <string name="initial_setup_pickup_pick_point">Pick Me Up At</string>
    <string name="initial_setup_pickup_drop_point">Drop Me Off At</string>
    <string name="initial_setup_pickup_timing_switch">Ask me to reschedule these timings at the beginning of every week.</string>

    <!-- Not available university block-->
    <string name="initial_setup_else_reject_uh_oh">Uh oh,</string>
    <string name="initial_setup_else_reject_message">We\'re sorry, but arcab is not available in
        your university or workplace at the moment. Enter the name of your organization and we will
        get back to your ASAP.</string>
    <string name="initial_setup_else_reject_hint">WORKPLACE/UNIVERSITY NAME</string>
    <string name="initial_setup_else_reject_let_me_in">Let me in!</string>

    <!--Location on map section-->
    <string name="address_text">Address changes, according to pin</string>

    <!--Point selection block-->
    <string name="initial_setup_pickup_point_from">From <b>%s</b></string>

    <!--Preferred Seat block-->
    <string name="initial_setup_preferred_seat_title">Your Preferred Seat</string>
    <string name="initial_setup_preferred_seat_description">We may assign you another seat in case your selection has already been taken by someone else at a particular day/ time.</string>
    <string name="initial_setup_preferred_seat_select_seat">Select Seat</string>
    <string name="initial_setup_preferred_seat_reserved"><b>%s</b>&lt;br /&gt;is already booked for%s%s</string>

    <!--Payment plan block-->
    <string name="initial_setup_payment_plan_title">Your Plan?</string>
    <string name="initial_setup_payment_plan_description">Choose if you’d like to pay per trip or once a month.</string>
    <string name="initial_setup_payment_plan_per_trip">Pay Per Trip</string>
    <string name="initial_setup_payment_plan_monthly">Monthly</string>

    <!--Result block-->
    <string name="initial_setup_result_header">Pickup/Dropoff</string>
    <string name="initial_setup_result_message_to_from">You will be collected from here by arcab, to and from your organization.</string>
    <string name="initial_setup_result_message_to_only">You will be collected from here by arcab, to your organization.</string>
    <string name="initial_setup_result_message_from_only">You will be collected from here by arcab, from your organization.</string>
    <string name="initial_setup_result_premium_pickup">Premium pickup, you are collected from the nearest street to home.</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unspecified">Unspecified</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>

    <string name="auth_phone_number_header">Your Number?</string>
    <string name="auth_header_verify_phone">Verify</string>
    <string name="auth_verify_phone_code_hint">Code</string>
    <string name="edit_mobile_number">Edit mobile number</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="auth_header_birth">And?</string>
    <string name="auth_footer_birth">You must be at least 18 years old for arcab. We don\'t share this with anyone.</string>
    <string name="auth_header">Move\nTogether.</string>
    <string name="auth_enter_with_mobile_number">Enter with mobile number</string>
    <string name="auth_enter_with_social_account">Enter with Social Account</string>
    <string name="auth_footer">Read arcab Privacy and Safety Policy, Payments Policy. Terms of Use.</string>
    <string name="auth_email_title">Hi %1$s</string>
    <string name="auth_password_title_new">Set Your Password</string>
    <string name="auth_password_title_old">Welcome Back</string>
    <string name="auth_verify_number_explanation">We sent you an SMS to %1$s to continue creating your new account</string>
    <string name="auth_header_email">Hi</string>
    <string name="auth_footer_email">Use your personal email address. You can connect your work/university address later on.</string>
    <string name="auth_header_from_social">Is That Right?</string>
    <string name="auth_header_verify_id">Verify ID</string>
    <string name="emirates_id_number">Emirates id number</string>
    <string name="capture_emirates_id">Capture Emirates ID</string>
    <string name="auth_footer_verify_id">In order to build trust in the real world, we ask everyone to verify they official identity. This info is strictly for verification and will never be shared publicly. You may also verify later within 7 days.</string>

    <!--Rules section-->
    <string name="header_privacy">Privacy</string>
    <string name="content_privacy">At arcab we value our privacy above everything else. We are
        upfront about protecting your information and allow you to choose what you share. You may
        control your preferences in settings.</string>
    <string name="header_safety">Safety</string>
    <string name="content_safety">We\'re committed to building a community that is safe for
        everyone to move together. You will be asked to verify your official government ID later on.
    \n\n
    Knowing that everyone is on board with our mission helps us achieve what we set out for - building a platform based on communities.</string>
    <string name="agree_text">I agree treat everyone in the arcab community with respect an without bias.
    \n\n
    I agree to accept the arcab <a href="">Terms of Use Privacy ans Safety Policy</a> and <a href="">Payments Policy</a></string>
    <string name="decline_text">Decline</string>
    <string name="accept_text">Accept</string>

    <!--Cancel sign up section-->
    <string name="cancel_header">Cancel Sign Up?</string>
    <string name="cancel_message">You will not be able to create an arcab account if you choose to
        decline the set terms mentioned before.
    \n\n
    In case you change your mind you can always sign up again, provided you accept the set terms.
    \n\n
    Got questions? <a href="">Ask us anything</a>.</string>
    <string name="go_back_text">Go back</string>

    <!--Profile section-->
    <string name="profile_header">Hi %s</string>
    <string name="manage_pass">Manage pass</string>
    <string name="splash_title">Move \nTogether.</string>
</resources>
