<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.DeclineFragment">

    <TextView
        android:id="@+id/cancel_header"
        android:text="@string/cancel_header"
        style="@style/TextAppearanceHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/cancel_text"
        android:text="@string/cancel_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:fontFamily="@font/colfax_regular"
        android:textSize="16sp"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@id/cancel_header"
        android:layout_marginTop="76dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <TextView
        android:id="@+id/go_back_btn"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:text="@string/go_back_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textAllCaps="true"
        android:background="@drawable/bg_btn_outline"
        app:layout_constraintBottom_toTopOf="@id/navBar"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="32dp"/>

    <include
        android:id="@+id/navBar"
        layout="@layout/navigation_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>