<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorFragmentBg"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.auth.mobile.PhoneFragment"
            android:paddingBottom="@dimen/auth_content_padding_bottom">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearanceHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_header_birth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/genderRadioGroupContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/auth_screen_padding"
                android:layout_marginStart="@dimen/auth_screen_padding"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/auth_header_margin_bottom"
                    android:gravity="center"

                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:button="@null"
                        android:maxLines="1"
                        android:text="@string/female"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@drawable/selector_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text=" / "
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:button="@android:color/transparent"
                        android:maxLines="1"
                        android:text="@string/male"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@drawable/selector_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text=" / "
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                    <RadioButton
                        android:id="@+id/unspecified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:button="@android:color/transparent"
                        android:maxLines="1"
                        android:text="@string/unspecified"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@drawable/selector_text" />

                </RadioGroup>
            </HorizontalScrollView>


            <View
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintEnd_toEndOf="@+id/genderRadioGroupContainer"
                app:layout_constraintStart_toStartOf="@+id/genderRadioGroupContainer"
                app:layout_constraintTop_toBottomOf="@+id/genderRadioGroupContainer"
                android:background="@color/colorDisabled"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/gender"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/genderRadioGroupContainer"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                style="@style/TextAppearanceText"/>

            <View
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorDisabled"
                app:layout_constraintStart_toStartOf="@+id/dateTextView"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView"
                app:layout_constraintEnd_toEndOf="@id/dateTextView"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/date_of_birth"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/dateTextView"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView15"
                style="@style/TextAppearanceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/auth_footer_birth"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/navBar"
        layout="@layout/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

</FrameLayout>