<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorFragmentBg"
    android:clickable="true"
    android:focusable="true">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/navBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.auth.mobile.PhoneFragment">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearanceHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_header_verify_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.serg.arcab.ui.custom.PinEditText
                android:id="@+id/verification_code"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_header_margin_bottom"
                android:inputType="number"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_verify_phone_code_hint"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/verification_code"
                app:layout_constraintTop_toBottomOf="@+id/verification_code" />

            <TextView
                android:id="@+id/use_password_instead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Use password\ninstead"
                android:textAllCaps="true"
                android:gravity="end"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/verification_code"
                app:layout_constraintTop_toBottomOf="@+id/verification_code" />

            <TextView
                android:id="@+id/explainTextView"
                style="@style/TextAppearanceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/auth_verify_number_explanation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="1" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/navBar"
        layout="@layout/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>



</android.support.constraint.ConstraintLayout>